-Added button preview when customizing ZX Desktop buttons or F-keys
-Better detection of any file size of 6912 bytes is guessed as Spectrum screen
-Show when a menu has submenus using the ">" character
-Preserve minimized and maximized state on windows
-Remember size before minimize and maximize window
-Added actions on menu Window Management to: minimize, maximize or move to bottom
-ZX Desktop: footer buttons to enlarge or reduce ZX Desktop, not just enabling or disabling
-ZX Desktop: allow to set a background SCR file
-ZX Desktop: added setting to disable ZX Desktop when going to full screen 

Improved OSD Adventure Keyboard: allow to send space, enter and quotation marks
Improved OSD Keyboard: allow to use mouse, preserve window geometry
Improved Keyboard Help: load image automatically when changing machine
Improved handling of individual colour palettes modifications (Red, Green, Blue)
Improved portability of shell scripts
Improved fbdev driver: added setting for double buffer to avoid flickering on menu (--fbdev-double-buffer)
Improved fbdev driver: added setting to avoid resolution change on Raspberry Pi full screen mode (--fbdev-no-res-change)
Improved ZX Spectrum Next emulation: added layer2 priority colour bit
Improved Audio Chip Piano and Wave Piano: show octave for each note


Fixed Z80 halt behavior and PC location
Fixed disabling border when realvideo enabled on machines: Colecovision, Master System, MSX, SG1000, SpectraVideo
Fixed redrawing footer when fade out
Fixed showing character 127 on curses, stdout and simpletext video drivers
Fixed preserve breakpoints state when doing smartload
Fixed saving snapshot on some events that close ZEsarUX (F-key, AY Player, etc)
Fixed loading/saving TZX as Standard tape on Jupiter Ace
Fixed ejecting Spectravideo cartridge
Fixed segfault pressing F5 after pressing pause key
Fixed bug on OSD Adventure Keyboard when words of 5 characters lenght and setting sending final space enabled